yml changed for dependencies
I don't know how I missed this. I really need to make a new branch but ehh I'll figure that out after this works.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,8 @@ jobs:
     needs: determine-action
     if: |
       needs.determine-action.outputs.action == 'commit' ||
+      needs.determine-action.outputs.action == 'reveal' ||
+      needs.determine-action.outputs.action == 'extract' ||
       needs.determine-action.outputs.action == 'all'
     permissions:
       contents: write
@@ -109,10 +111,12 @@ jobs:
 
   reveal:
     runs-on: ubuntu-latest
-    needs: determine-action
+    needs: [determine-action, commit]
     if: |
-      needs.determine-action.outputs.action == 'reveal' ||
-      needs.determine-action.outputs.action == 'all'
+      (needs.determine-action.outputs.action == 'reveal' ||
+       needs.determine-action.outputs.action == 'extract' ||
+       needs.determine-action.outputs.action == 'all') &&
+      needs.commit.result == 'success'
     permissions:
       contents: write
     
@@ -158,10 +162,11 @@ jobs:
 
   extract:
     runs-on: ubuntu-latest
-    needs: determine-action
+    needs: [determine-action, reveal]
     if: |
-      needs.determine-action.outputs.action == 'extract' ||
-      needs.determine-action.outputs.action == 'all'
+      (needs.determine-action.outputs.action == 'extract' ||
+       needs.determine-action.outputs.action == 'all') &&
+      needs.reveal.result == 'success'
     permissions:
       contents: write
     
