--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,6 +103,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: rrpe-outputs
+        overwrite: true
         path: outputs/
         if-no-files-found: ignore
         retention-days: 3
@@ -171,6 +172,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: rrpe-outputs
+        overwrite: true
         path: outputs/
         if-no-files-found: ignore
         retention-days: 3
@@ -238,6 +240,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: rrpe-outputs
+        overwrite: true
         path: outputs/
         if-no-files-found: ignore
         retention-days: 3
