fixed reveal job still rebasing on top of outdated tree
god help me if it doesn't work now.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,6 +74,14 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         fetch-depth: 0
+
+    - name: Sync repository
+      run: |
+        BRANCH="${GITHUB_REF_NAME:-$(git rev-parse --abbrev-ref HEAD)}"
+        [ -z "$BRANCH" ] && BRANCH="main"
+        git fetch origin "$BRANCH"
+        git checkout "$BRANCH"
+        git reset --hard origin/"$BRANCH"
     
     - name: Set up Python
       uses: actions/setup-python@v5
@@ -116,7 +124,6 @@ jobs:
         git config --local user.name "GitHub Action"
         BRANCH="${GITHUB_REF_NAME:-$(git rev-parse --abbrev-ref HEAD)}"
         [ -z "$BRANCH" ] && BRANCH="main"
-        git fetch origin "$BRANCH"
         git add outputs/
         # Use ET timezone for date to match trade date
         TRADE_DATE=$(TZ=America/New_York date +%Y-%m-%d)
@@ -124,8 +131,6 @@ jobs:
           echo "No output changes to commit; skipping push."
         else
           git commit -m "Auto-commit: predictions for $TRADE_DATE"
-          git pull --rebase --autostash origin "$BRANCH"
-          git pull --rebase origin "$BRANCH"
           git push origin HEAD:"$BRANCH"
         fi
 
@@ -145,6 +150,14 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         fetch-depth: 0
+
+    - name: Sync repository
+      run: |
+        BRANCH="${GITHUB_REF_NAME:-$(git rev-parse --abbrev-ref HEAD)}"
+        [ -z "$BRANCH" ] && BRANCH="main"
+        git fetch origin "$BRANCH"
+        git checkout "$BRANCH"
+        git reset --hard origin/"$BRANCH"
     
     - name: Download outputs artifact
       if: needs.commit.result == 'success'
@@ -195,7 +208,6 @@ jobs:
         git config --local user.name "GitHub Action"
         BRANCH="${GITHUB_REF_NAME:-$(git rev-parse --abbrev-ref HEAD)}"
         [ -z "$BRANCH" ] && BRANCH="main"
-        git fetch origin "$BRANCH"
         git add outputs/
         # Use ET timezone for date to match trade date
         TRADE_DATE=$(TZ=America/New_York date +%Y-%m-%d)
@@ -203,8 +215,6 @@ jobs:
           echo "No output changes to commit; skipping push."
         else
           git commit -m "Auto-reveal: outcomes for $TRADE_DATE"
-          git pull --rebase --autostash origin "$BRANCH"
-          git pull --rebase origin "$BRANCH"
           git push origin HEAD:"$BRANCH"
         fi
 
@@ -223,6 +233,14 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         fetch-depth: 0
+
+    - name: Sync repository
+      run: |
+        BRANCH="${GITHUB_REF_NAME:-$(git rev-parse --abbrev-ref HEAD)}"
+        [ -z "$BRANCH" ] && BRANCH="main"
+        git fetch origin "$BRANCH"
+        git checkout "$BRANCH"
+        git reset --hard origin/"$BRANCH"
     
     - name: Download outputs artifact
       if: needs.reveal.result == 'success'
@@ -273,14 +291,11 @@ jobs:
         git config --local user.name "GitHub Action"
         BRANCH="${GITHUB_REF_NAME:-$(git rev-parse --abbrev-ref HEAD)}"
         [ -z "$BRANCH" ] && BRANCH="main"
-        git fetch origin "$BRANCH"
         git add outputs/
         TRADE_DATE=$(TZ=America/New_York date +%Y-%m-%d)
         if git diff --staged --quiet; then
           echo "No output changes to commit; skipping push."
         else
           git commit -m "Auto-extract: randomness for $TRADE_DATE"
-          git pull --rebase --autostash origin "$BRANCH"
-          git pull --rebase origin "$BRANCH"
           git push origin HEAD:"$BRANCH"
         fi
